--- a/ExpressBindingGenerator/CMakeLists.txt
+++ b/ExpressBindingGenerator/CMakeLists.txt
@@ -30,11 +30,27 @@ find_file(FLEX_EXECUTABLE win_flex.exe HINTS ${CMAKE_CURRENT_SOURCE_DIR}/Tools/w
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
 find_package(PythonInterp REQUIRED)
+find_file(PYTHON_2TO3_SCRIPT NAMES 2to3.py HINTS "C:\\Program Files\\Python36\\Tools\\scripts" REQUIRED)
 
 # Target which invokes a script inside boost to provide a MPL library build allowing up to 100 entries.
+#add_custom_target(Commands.UpdateBoostMPL
+#	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
+#	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
+#)
+
+#set(ENV{PATH} $ENV{PATH};${PYTHON_EXECUTABLE})
+
+#get_filename_component(PYTHON_FILEPATH ${PYTHON_EXECUTABLE} PROGRAM)
+
+file(TO_NATIVE_PATH ${PYTHON_EXECUTABLE} PYTHON_FILEPATH)
+
 add_custom_target(Commands.UpdateBoostMPL
-	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
-	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
+	COMMAND set PATH=%PATH%;${PYTHON_FILEPATH}
+	COMMAND echo %PATH%
+	COMMAND ${PYTHON_EXECUTABLE} ${PYTHON_2TO3_SCRIPT} -w -n --output-dir=${CMAKE_CURRENT_BINARY_DIR} "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\fix_boost_mpl_preprocess.py"
+	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
+	COMMAND ${PYTHON_EXECUTABLE} ${PYTHON_2TO3_SCRIPT} -w -n --output-dir=${CMAKE_CURRENT_BINARY_DIR} "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\boost_mpl_preprocess.py"
+	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
 )
 
 set_target_properties(Commands.UpdateBoostMPL PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
@@ -96,23 +112,11 @@ add_executable(OpenInfraPlatform.ExpressBindingGenerator
 	${BISON_Parser_OUTPUTS}
 )
 
-#message(STATUS $<IF:$<IN_LIST:${IFC2X3_SCHEMA},${IFC_SCHEMAS}>, "blub", "no blub" > )
-
-set(mess 
-add_custom_target(Commands.Message
-	COMMAND ${CMAKE_COMMAND} -E echo $<IF: 1, "${IFC2X3_SCHEMA} selected." , "${IFC2X3_SCHEMA} not selected." >
-)
-
-set_target_properties(Commands.Message PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
 
 # Custom target that generates the early binding library files.
 add_custom_target(Commands.GenerateEarlyBinding
 	COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/EarlyBinding	
-	#COMMAND $<IF: $<IN_LIST: ${IFC2X3_SCHEMA}, ${IFC_SCHEMAS}>, OpenInfraPlatform.ExpressBindingGenerator ${CMAKE_CURRENT_SOURCE_DIR}/schemas/${IFC2X3_SCHEMA} -o ${CMAKE_BINARY_DIR}/EarlyBinding, ${CMAKE_COMMAND} -E echo "${IFC2X3_SCHEMA} not selected." >	
-	#COMMAND $<IF: $<IN_LIST: ${IFC4_SCHEMA}, ${IFC_SCHEMAS}>, OpenInfraPlatform.ExpressBindingGenerator ${CMAKE_CURRENT_SOURCE_DIR}/schemas/${IFC4_SCHEMA} -o ${CMAKE_BINARY_DIR}/EarlyBinding , ${CMAKE_COMMAND} -E echo "${IFC4_SCHEMA} not selected." >
-	#COMMAND $<IF: $<IN_LIST: ${IFC4X1_SCHEMA}, ${IFC_SCHEMAS}>, OpenInfraPlatform.ExpressBindingGenerator ${CMAKE_CURRENT_SOURCE_DIR}/schemas/${IFC4X1_SCHEMA} -o ${CMAKE_BINARY_DIR}/EarlyBinding , ${CMAKE_COMMAND} -E echo "${IFC4X1_SCHEMA} not selected." >
-	#COMMAND	$<IF: $<IN_LIST: ${IFC4X2_BIM4ROAD_SCHEMA}, ${IFC_SCHEMAS}>, OpenInfraPlatform.ExpressBindingGenerator ${CMAKE_CURRENT_SOURCE_DIR}/schemas/${IFC4X2_BIM4ROAD_SCHEMA} -o ${CMAKE_BINARY_DIR}/EarlyBinding , ${CMAKE_COMMAND} -E echo "${IFC4X2_BIM4ROAD_SCHEMA} not selected." >
-	#COMMAND	$<IF: $<IN_LIST: ${IFC4X2_DRAFT_1_SCHEMA}, ${IFC_SCHEMAS}>, OpenInfraPlatform.ExpressBindingGenerator ${CMAKE_CURRENT_SOURCE_DIR}/schemas/${IFC4X2_DRAFT_1_SCHEMA} -o ${CMAKE_BINARY_DIR}/EarlyBinding , ${CMAKE_COMMAND} -E echo "${IFC4X2_DRAFT_1_SCHEMA} not selected." >
+	COMMAND OpenInfraPlatform.ExpressBindingGenerator ${CMAKE_CURRENT_SOURCE_DIR}/schemas/${IFC2X3_SCHEMA} -o ${CMAKE_BINARY_DIR}/EarlyBinding
 )
 
 add_dependencies(Commands.GenerateEarlyBinding OpenInfraPlatform.ExpressBindingGenerator)
