Changed UpdateBoostMPL script to work with MinGW gcc compiler.

--- a/ExpressBindingGenerator/CMakeLists.txt
+++ b/ExpressBindingGenerator/CMakeLists.txt
@@ -29,10 +29,26 @@ find_file(FLEX_EXECUTABLE win_flex.exe HINTS ${CMAKE_CURRENT_SOURCE_DIR}/Tools/w
 
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
-find_package(PythonInterp REQUIRED)
-get_filename_component(PYTHON_DIRECTORY ${PYTHON_EXECUTABLE} DIRECTORY)
-find_file(PYTHON_2TO3_SCRIPT NAMES 2to3.py HINTS "${PYTHON_DIRECTORY}\\Tools\\scripts" REQUIRED)
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
+if(Python_FOUND)
+	message(STATUS "Found Python ${Python_VERSION}")
+else()
+	message(ERROR "Python not found.")
+endif()
 
+get_filename_component(Python_DIRECTORY ${Python_EXECUTABLE} DIRECTORY)
+
+find_file(Python_2to3_SCRIPT NAMES 2to3.py HINTS "${Python_DIRECTORY}\\Tools\\scripts" REQUIRED)
+
+message(STATUS ${Qt5_DIR})
+string(FIND ${Qt5_DIR} "Qt" POS)
+string(SUBSTRING ${Qt5_DIR} 0 ${POS} Qt5_ROOT)
+string(SUBSTRING ${Qt5_DIR} ${POS} 2 Qt5_ROOT_SUFFIX)
+string(APPEND Qt5_ROOT ${Qt5_ROOT_SUFFIX})
+message(STATUS ${Qt5_ROOT})
+
+set(MinGW_DIR ${Qt5_ROOT}/Tools/mingw730_64/bin)
+file(TO_NATIVE_PATH ${MinGW_DIR} MinGW_DIR)
 # Target which invokes a script inside boost to provide a MPL library build allowing up to 100 entries.
 #add_custom_target(Commands.UpdateBoostMPL
 #	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
@@ -41,22 +57,16 @@ find_file(PYTHON_2TO3_SCRIPT NAMES 2to3.py HINTS "${PYTHON_DIRECTORY}\\Tools\\sc
 
 #set(ENV{PATH} $ENV{PATH};${PYTHON_EXECUTABLE})
 
+file(TO_NATIVE_PATH ${Python_EXECUTABLE} Python_FILEPATH)
+file(TO_NATIVE_PATH ${Python_DIRECTORY} Python_DIRECTORY)
 
-message(STATUS ${CMAKE_CXX_COMPILER})
 
-
-file(TO_NATIVE_PATH ${PYTHON_EXECUTABLE} PYTHON_FILEPATH)
-file(TO_NATIVE_PATH ${PYTHON_DIRECTORY} PYTHON_DIRECTORY)
-
-#set(ENV{PATH} $ENV{PATH}${PYTHON_FILEPATH})
-
-#set(CUSTOM_PATH $ENV{PATH} ${PYTHON_FILEPATH})
 set(CUSTOM_PATH $ENV{PATH})
 list(APPEND CUSTOM_PATH ${PYTHON_FILEPATH})
 list(LENGTH CUSTOM_PATH CUSTOM_PATH_LENGTH)
 list(JOIN CUSTOM_PATH ";" CUSTOM_PATH_JOINED)
 
-add_custom_target(Commands.Print COMMAND set PYTHON_PATH=${PYTHON_FILEPATH} COMMAND set PATH=%PATH%%PYTHON_PATH% COMMAND echo %PATH%) 
+add_custom_target(Commands.Print COMMAND set PYTHON_PATH=${Python_FILEPATH} COMMAND set PATH=%PATH%%PYTHON_PATH% COMMAND echo %PATH%) 
 set_target_properties(Commands.Print PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
 
 file(TO_NATIVE_PATH ${CMAKE_CXX_COMPILER} COMPILER)
@@ -66,20 +76,25 @@ file(READ ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd PREPROCESS_C
 string(REPLACE "gcc" "cl" PREPROCESS_CMD ${PREPROCESS_CMD})
 file(WRITE ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd ${PREPROCESS_CMD})
 
-add_custom_target(Commands.UpdateBoostMPL
-	COMMAND set PYTHON_PATH=${PYTHON_DIRECTORY}
-	COMMAND set PATH=%PATH%%PYTHON_PATH%
-	COMMAND echo %PATH%
-	COMMAND ${PYTHON_EXECUTABLE} ${PYTHON_2TO3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\fix_boost_mpl_preprocess.py"
-	COMMAND ${PYTHON_EXECUTABLE} ${PYTHON_2TO3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\boost_mpl_preprocess.py"
-	COMMAND ${PYTHON_EXECUTABLE} ${PYTHON_2TO3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess.py"
-	COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_gcc.cmd
-	COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd
-	COMMAND ${PYTHON_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
-	COMMAND ${PYTHON_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
-	COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd
-	COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_gcc.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd
-)
+if(${Python_VERSION_MAJOR} EQUAL 3)
+	add_custom_target(Commands.UpdateBoostMPL
+		COMMAND set PYTHON_PATH=${Python_DIRECTORY}
+		COMMAND set GCC_PATH=${MinGW_DIR}
+		COMMAND set PATH=%PATH%%PYTHON_PATH%
+		COMMAND set PATH=%PATH%\;
+		COMMAND set PATH=%PATH%%GCC_PATH%
+		COMMAND echo %PATH%
+		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\fix_boost_mpl_preprocess.py"
+		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\boost_mpl_preprocess.py"
+		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess.py"
+		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_gcc.cmd
+		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd
+		COMMAND ${Python_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
+		COMMAND ${Python_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
+		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd
+		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_gcc.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd
+	)
+endif()
 
 set_target_properties(Commands.UpdateBoostMPL PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
 
