Switched to python2 since 2to3 fix script doesn't work properly.

--- a/ExpressBindingGenerator/CMakeLists.txt
+++ b/ExpressBindingGenerator/CMakeLists.txt
@@ -29,75 +29,70 @@ find_file(FLEX_EXECUTABLE win_flex.exe HINTS ${CMAKE_CURRENT_SOURCE_DIR}/Tools/w
 
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
-find_package(Python COMPONENTS Interpreter Development REQUIRED)
-if(Python_FOUND)
-	message(STATUS "Found Python ${Python_VERSION}")
-else()
-	message(ERROR "Python not found.")
-endif()
+find_package(Python2 REQUIRED)
 
-get_filename_component(Python_DIRECTORY ${Python_EXECUTABLE} DIRECTORY)
+#if(Python_FOUND)
+#	message(STATUS "Found Python${Python_VERSION}.")
+#else()
+#	message(STATUS "Python2 not found, looking for Python3.")
+#	find_package(Python REQUIRED)
+#	if(NOT Python_FOUND)
+#		message(ERROR "Python not found.")
+#	endif()
+#endif()
 
-find_file(Python_2to3_SCRIPT NAMES 2to3.py HINTS "${Python_DIRECTORY}\\Tools\\scripts" REQUIRED)
+get_filename_component(Python2_DIRECTORY ${Python2_EXECUTABLE} DIRECTORY)
 
-message(STATUS ${Qt5_DIR})
+#find_file(Python_2to3_SCRIPT NAMES 2to3.py HINTS "${Python_DIRECTORY}\\Tools\\scripts" REQUIRED)
+
+# Get root directory of Qt intsallation
 string(FIND ${Qt5_DIR} "Qt" POS)
 string(SUBSTRING ${Qt5_DIR} 0 ${POS} Qt5_ROOT)
 string(SUBSTRING ${Qt5_DIR} ${POS} 2 Qt5_ROOT_SUFFIX)
 string(APPEND Qt5_ROOT ${Qt5_ROOT_SUFFIX})
 message(STATUS ${Qt5_ROOT})
 
+# Set path to MinGW bin folder containing gcc executable
 set(MinGW_DIR ${Qt5_ROOT}/Tools/mingw730_64/bin)
+
+# Get Python and MinGW directories in native path format to add them to %PATH% variable
 file(TO_NATIVE_PATH ${MinGW_DIR} MinGW_DIR)
-# Target which invokes a script inside boost to provide a MPL library build allowing up to 100 entries.
-#add_custom_target(Commands.UpdateBoostMPL
-#	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
-#	COMMAND "${PYTHON_EXECUTABLE}" ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
-#)
+file(TO_NATIVE_PATH ${Python2_DIRECTORY} Python2_DIRECTORY)
 
-#set(ENV{PATH} $ENV{PATH};${PYTHON_EXECUTABLE})
+#if(${Python_VERSION_MAJOR} EQUAL 3)
+#	add_custom_target(Commands.UpdateBoostMPL
+#		COMMAND set PYTHON_PATH=${Python_DIRECTORY}
+#		COMMAND set GCC_PATH=${MinGW_DIR}
+#		COMMAND set PATH=%PATH%%PYTHON_PATH%
+#		COMMAND set PATH=%PATH%\;
+#		COMMAND set PATH=%PATH%%GCC_PATH%
+#		COMMAND echo %PATH%
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\fix_boost_mpl_preprocess.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\boost_mpl_preprocess.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\pp.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess_set.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess_map.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess_list.py"
+#		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w -f idioms -f buffer -f set_literal -f ws_comma "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess_vector.py"
+#		COMMAND ${Python_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
+#		COMMAND ${Python_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
+#	)
+#	
+#	set_target_properties(Commands.UpdateBoostMPL PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
+#endif()
 
-file(TO_NATIVE_PATH ${Python_EXECUTABLE} Python_FILEPATH)
-file(TO_NATIVE_PATH ${Python_DIRECTORY} Python_DIRECTORY)
-
-
-set(CUSTOM_PATH $ENV{PATH})
-list(APPEND CUSTOM_PATH ${PYTHON_FILEPATH})
-list(LENGTH CUSTOM_PATH CUSTOM_PATH_LENGTH)
-list(JOIN CUSTOM_PATH ";" CUSTOM_PATH_JOINED)
-
-add_custom_target(Commands.Print COMMAND set PYTHON_PATH=${Python_FILEPATH} COMMAND set PATH=%PATH%%PYTHON_PATH% COMMAND echo %PATH%) 
-set_target_properties(Commands.Print PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
-
-file(TO_NATIVE_PATH ${CMAKE_CXX_COMPILER} COMPILER)
-
-file(READ ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd PREPROCESS_CMD)
-
-string(REPLACE "gcc" "cl" PREPROCESS_CMD ${PREPROCESS_CMD})
-file(WRITE ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd ${PREPROCESS_CMD})
-
-if(${Python_VERSION_MAJOR} EQUAL 3)
-	add_custom_target(Commands.UpdateBoostMPL
-		COMMAND set PYTHON_PATH=${Python_DIRECTORY}
-		COMMAND set GCC_PATH=${MinGW_DIR}
-		COMMAND set PATH=%PATH%%PYTHON_PATH%
-		COMMAND set PATH=%PATH%\;
-		COMMAND set PATH=%PATH%%GCC_PATH%
-		COMMAND echo %PATH%
-		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\fix_boost_mpl_preprocess.py"
-		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\boost_mpl_preprocess.py"
-		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\preprocess.py"
-		COMMAND ${Python_EXECUTABLE} ${Python_2to3_SCRIPT} -w "${Boost_INCLUDE_DIR}\\libs\\mpl\\preprocessed\\pp.py"
-	#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_gcc.cmd
-		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd
-		COMMAND ${Python_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
-		COMMAND ${Python_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
-		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_cl.cmd
-		#COMMAND ${CMAKE_COMMAND} -E rename ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess_gcc.cmd ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/preprocess.cmd
-	)
-	
-	set_target_properties(Commands.UpdateBoostMPL PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
-endif()
+add_custom_target(Commands.UpdateBoostMPL
+	COMMAND set PYTHON_PATH=${Python2_DIRECTORY}
+	COMMAND set GCC_PATH=${MinGW_DIR}
+	COMMAND set PATH=%PATH%%PYTHON_PATH%
+	COMMAND set PATH=%PATH%\;
+	COMMAND set PATH=%PATH%%GCC_PATH%
+	COMMAND echo %PATH%
+	COMMAND ${Python2_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/fix_boost_mpl_preprocess.py ${Boost_INCLUDE_DIR}
+	COMMAND ${Python2_EXECUTABLE} ${Boost_INCLUDE_DIR}/libs/mpl/preprocessed/boost_mpl_preprocess.py --sequence-type=both --num-elements=100 ${Boost_INCLUDE_DIR}
+)
+set_target_properties(Commands.UpdateBoostMPL PROPERTIES FOLDER "OpenInfraPlatform/ExpressBindingGenerator/Commands")
 
 
 # Macro to add IFC formats and the respective schemas.
