--- a/Infrastructure/CMakeLists.txt
+++ b/Infrastructure/CMakeLists.txt
@@ -48,7 +48,7 @@ file(GLOB OpenInfraPlatform_Infrastructure_ProxyModel_Source 				        src/Ope
 #file(GLOB OpenInfraPlatform_Infrastructure_Export_Source 							src/OpenInfraPlatform/Infrastructure/Export/*.*)		
 #file(GLOB OpenInfraPlatform_Infrastructure_IfcPL_Source 							src/OpenInfraPlatform/Infrastructure/IfcPL/*.*)		
 #file(GLOB OpenInfraPlatform_Infrastructure_Import_Source 							src/OpenInfraPlatform/Infrastructure/Import/*.*)		
-file(GLOB OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source				src/OpenInfraPlatform/Infrastructure/PointCloudProcessing/*.*)
+#file(GLOB OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source				src/OpenInfraPlatform/Infrastructure/PointCloudProcessing/*.*)	06.05.19 moved to pcp module (coetzee)
 file(GLOB OpenInfraPlatform_Infrastructure_Railway_Source							src/OpenInfraPlatform/Infrastructure/Railway/*.*)										
 file(GLOB OpenInfraPlatform_Infrastructure_Source 									src/OpenInfraPlatform/Infrastructure/*.*)	
 
@@ -72,7 +72,7 @@ source_group(OpenInfraPlatform\\Infrastructure\\Tessellation  						FILES ${Open
 #source_group(OpenInfraPlatform\\Infrastructure\\Export								FILES ${OpenInfraPlatform_Infrastructure_Export_Source})		
 #source_group(OpenInfraPlatform\\Infrastructure\\IfcPL								FILES ${OpenInfraPlatform_Infrastructure_IfcPL_Source})		
 #source_group(OpenInfraPlatform\\Infrastructure\\Import								FILES ${OpenInfraPlatform_Infrastructure_Import_Source})		
-source_group(OpenInfraPlatform\\Infrastructure\\PointCloudProcessing				FILES ${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source})				
+#source_group(OpenInfraPlatform\\Infrastructure\\PointCloudProcessing				FILES ${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source})	06.05.19 moved to pcp module (coetzee)		
 source_group(OpenInfraPlatform\\Infrastructure\\Railway								FILES ${OpenInfraPlatform_Infrastructure_Railway_Source})				
 
 include_directories(
@@ -82,8 +82,8 @@ include_directories(
 	${BLUEFRAMEWORK_INCLUDE_DIR}
 	${EIGEN3_INCLUDE_DIR}
 	src
-	${LIBLAS_INCLUDE_DIRS}
-	../external/QtXlsxWriter/src/xlsx
+	#${LIBLAS_INCLUDE_DIRS}	06.05.19 moved to pcp module (coetzee)
+	../external/QtXlsxWriter/src/xlsx	
 	${OKLABI_ROOT_DIR}/Kern-C++
 	${OKLABI_ROOT_DIR}/Dienst
 	${QHULL_INCLUDE_DIRS}
@@ -92,7 +92,7 @@ include_directories(
 	#Experimental
 	${visit_struct_INCLUDE_DIR}
 	#${OpenInfraPlatform.EarlyBinding_INCLUDE_DIR}
-	${CC_INCLUDE_DIRS}
+	#${CC_INCLUDE_DIRS}	06.05.19 moved to pcp module (coetzee)
 )
 
 # Create a target for the library
@@ -116,11 +116,10 @@ add_library(OpenInfraPlatform.Infrastructure SHARED
 	#${OpenInfraPlatform_Infrastructure_Export_Source}
 	#${OpenInfraPlatform_Infrastructure_IfcPL_Source}
 	#${OpenInfraPlatform_Infrastructure_Import_Source}
-	${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source}
+	#${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source}	06.05.19 moved to pcp module (coetzee)
 	${OpenInfraPlatform_Infrastructure_Railway_Source}
 	${OpenInfraPlatform_Infrastructure_Source}
 )
-
 
 target_link_libraries( OpenInfraPlatform.Infrastructure
 		OpenInfraPlatform.EarlyBinding
@@ -133,7 +132,7 @@ target_link_libraries( OpenInfraPlatform.Infrastructure
 		#${PYTHON_LIBRARIES}
 		# External libs
 		QtXlsxWriter
-		${LIBLAS_LIBRARIES}
+		#${LIBLAS_LIBRARIES}	06.05.19 moved to pcp module (coetzee)
 		# Oklabi
 		${OKLABI_LIBRARIES}
 		#
@@ -143,12 +142,132 @@ target_link_libraries( OpenInfraPlatform.Infrastructure
 		# EXPRESS Binding for Meta model
 		#OpenInfraPlatform.ExpressBinding
 		Rpcrt4.lib
-		${CC_LIBRARIES}
+		#${CC_LIBRARIES}	06.05.19 moved to pcp module (coetzee)
 	)
-
 # Use the Widgets module from Qt 5.
 target_link_libraries(OpenInfraPlatform.Infrastructure Qt5::Xml Qt5::XmlPatterns Qt5::Gui Qt5::OpenGL)
 
+#----------------------------------------------------------
+# MODULES
+#----------------------------------------------------------
+
+# Group of entries below. 
+# Select all modules with necessary thirdparty libraries to be built. 
+# Otherwise only core project is built.
+
+#----------------------------------------------------------
+# (1/7) Point Cloud Processing ("pcp_module")
+#----------------------------------------------------------
+Option(MODULES_POINT_CLOUD_PROCESSING ON)
+
+If(EXISTS ${CC_DIR} ${libLAS_DIR})
+
+	# Cmake Settings.
+	find_path(CMAKE_PREFIX_PATH NAMES include/CC HINTS "C:/thirdparty/vs2015/x64/CloudCompare-master/")
+	find_path(CMAKE_PREFIX_PATH NAMES include/libLAS HINTS "C:/thirdparty/vs2015/x64/libLAS-1.6-master/")
+
+	# Find required thirdparty libraries.
+	find_package(CC REQUIRED)
+	find_package(libLAS REQUIRED)
+
+	# Set directories and add executable. 
+	add_subdirectory(OpenInfraPlatform.Infrastructure [PointCloudProcessing]
+	)	
+
+	file(GLOB OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source				src/OpenInfraPlatform/Infrastructure/PointCloudProcessing/*.*)
+	source_group(OpenInfraPlatform\\Infrastructure\\PointCloudProcessing				FILES ${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source}
+	)
+
+	add_executable(PointCloudProcessing
+	${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source}
+	)
+
+	# Set include directories.
+	include_directories(
+		${LIBLAS_INCLUDE_DIRS}
+		${CC_INCLUDE_DIRS}
+	)	
+
+	add_library(PointCloudProcessing	SHARED 
+		${OpenInfraPlatform_Infrastructure_PointCloudProcessing_Source}
+	)
+
+	# Link external libraries to executable.
+	target_link_libraries(PointCloudProcessing
+		${LIBLAS_LIBRARIES}
+		${CC_LIBRARIES}
+		)
+
+	# Calling copy functions to provide custom targets.
+	# Add the custom targets to copy the required binaries.
+	CLOUDCOMPARE_COPY_BINARIES(${CMAKE_BINARY_DIR})
+
+	# Set the target properties.
+	set_target_properties(CloudCompareCopyBinaries 	PROPERTIES FOLDER "Copy")
+	set_target_properties(libLASCopyBinaries	PROPERTIES FOLDER "Copy")
+
+	# Install files.
+	install(FILES ${LIBLAS_RELEASE_BINARIES} ${CC_RELEASE_BINARIES}
+		DESTINATION bin
+		COMPONENT oip_thirdparty)
+
+endif()
+
+#----------------------------------------------------------
+# (2/7) Digital Elevation Model ("dem_module")
+#----------------------------------------------------------
+Option(MODULES_DIGITAL_ELEVATION_MODEL ON)
+
+if(MODULES_DIGITAL_ELEVATION_MODEL)
+
+ENDIF()
+
+#----------------------------------------------------------
+# (3/7) Girder ("girder_module")
+#----------------------------------------------------------
+Option(MODULES_GIRDER ON)
+
+if(MODULES_GIRDER)
+
+ENDIF()
+
+#----------------------------------------------------------
+# (4/7) Proxy Model ("proxy_module")
+#----------------------------------------------------------
+Option(MODULES_PROXY_MODEL ON)
+
+if(MODULES_PROXY_MODEL)
+
+ENDIF()
+
+#----------------------------------------------------------
+# (5/7) Railway ("rail_module")
+#----------------------------------------------------------
+Option(MODULES_RAILWAY ON)
+
+if(MODULES_RAILWAY)
+
+ENDIF()
+
+#----------------------------------------------------------
+# (6/7) Slabfield ("slf_module")
+#----------------------------------------------------------
+Option(MODULES_SLABFIELD ON)
+
+if(MODULES_SLABFIELD)
+
+ENDIF()
+
+#----------------------------------------------------------
+# (7/7) Tesselation ("tsl_module")
+#----------------------------------------------------------
+Option(MODULES_TESSELATION ON)
+
+if(MODULES_TESSELATION)
+
+ENDIF()
+
+# Install.
 install(TARGETS OpenInfraPlatform.Infrastructure   
    RUNTIME DESTINATION bin
    COMPONENT oip_runtime
